client/src/pages/CalendarPage/sections/Calendar.scss
// Import partials
@use "../../../styles/partials/colors" as *;
@use "../../../styles/partials/fonts" as *;
@use "../../../styles/partials/mixins" as *;
@use "../../../styles/global.scss" as *;

@import url('https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/5.10.1/main.min.css');

.calendar {
  background: $frosted-glass;
  border-radius: 1rem;
  padding: 1.25rem;
  margin: 1.25rem auto;
  max-width: 75rem;
  box-shadow: $shadow-tertiary;

  @include tablet {
    padding: 0.625rem;
    margin: 0.625rem auto;
  }

  @include desktop {
    max-width: 110rem;
  }

  @include large-desktop {
    max-width: 120rem;
  }

  &__event-title {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 70%;
  }

  &__event-time {
    margin-left: .25rem;
  }

  &__event-icon {
    margin-left: .25rem;
  }

  &__header {
    align-items: center;
    margin-bottom: 1.25rem;
    background: $primary-very-light-blue;
    padding: 0.625rem 1.25rem;
    border-radius: 0.75rem;
    box-shadow: 0 0.25rem 0.375rem rgba(0, 0, 0, 0.1);

    @include tablet {
      flex-direction: column;
      align-items: flex-start;
    }
  }

  &__search-container {
    position: relative;
    flex: 1;
    margin-right: 0.75rem;
    border-radius: 0.75rem;
    box-shadow: $shadow-tertiary;

    @media (max-width: 768px) {
      width: 100%;
      margin-bottom: 1rem;
      margin-right: 0;
    }
  }

  &__search-icon {
    position: absolute;
    left: 0.625rem;
    top: 50%;
    transform: translateY(-50%);
    color: $primary-light-blue;
  }

  &__search-bar {
    width: 100%;
    padding: 0.625rem 0.625rem 0.625rem 1.875rem;
    border-radius: 0.75rem;
    border: 0.125rem solid $primary-medium-blue;
    background: rgba(255, 255, 255, 0.6);
    box-shadow: 0 0.25rem 0.375rem rgba(0, 0, 0, 0.1);
    font-size: 1rem;
    $font-family: $primary-font;
    color: $primary-dark-blue;

    &::placeholder {
      font-family: $primary-font;
      color: $primary-light-blue; 
      padding: .5rem;
      opacity: 1; 
    }

    &:-ms-input-placeholder { 
      color: $primary-light-blue;
      padding: .5rem;
    }
  
    &::-ms-input-placeholder {
      color: $primary-light-blue;
      padding: .5rem;
    }
  }

  &__toggle-sidebar-btn {
    padding: 0.625rem 1.25rem;
    border-radius: 0.75rem;
    border: none;
    background: $primary-light-blue;
    color: white;
    cursor: pointer;
    font-family: $primary-font;
    box-shadow: $shadow-primary;
    transition: background-color 0.3s, transform 0.2s;

    &:hover {
      background-color: darken($primary-light-blue, 10%);
    }

    &:active {
      background-color: darken($primary-light-blue, 20%);
      transform: scale(0.95);
    }

    @include tablet {
      margin-top: .5rem;
    }
  }

  &__content {
    display: flex;
    position: relative;
    height: 37rem;

    @include tablet {
      flex-direction: column;
      height: 40.5rem;
    }

    @include desktop {
      height: 48.05rem;
    }
  }

  &__main {
    flex: 3;
    border: 4px solid $primary-pale-blue;
    box-shadow: $shadow-senary;
  }

  &__overlay {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba($primary-pale-blue, 0.8);
    z-index: 500;

    @media (max-width: 320rem) {
      display: block;
    }
  }
}
/* ... */

